# NuxeoCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/api/: Document.cpp  Document.h  NuxeoAPI.h
src/client/: Authentication.cpp  Authentication.h  Nuxeo.cpp  Nuxeo.h
src/common/: Constants.h  Utils.h
src/net/: HTTPConnection.cpp  HTTPConnection.h
